syntax = "proto3";

option go_package = "user/pb";

message User {
    string first_name = 1;
    string last_name = 2;
    int32 age = 3;
    string permissions = 4;
}

message GetUserListRequest {}
message GetUserListResponse { 
    repeated User users = 1; 
}

service Users {
    rpc GetUserList(GetUserListRequest) returns (GetUserListResponse) {}
}